--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
   },
   "dependencies": {
     "express": "3.1.2",
-    "jade": "*",
-    "socket.io": "*",
-    "socket.io-client": "*",
-    "underscore": "*",
-    "cron": "*",
-    "twitter": "*",
-    "async": "*",
+    "compression": "1.0.2",
+    "morgan": "1.1.1",
+    "body-parser": "1.2.2",
+    "method-override": "1.0.2",
+
+    "jade": "1.3.1",
+    "socket.io": "1.0.3",
+    "socket.io-client": "1.0.3",
+    "underscore": "1.6.0",
+    "cron": "1.0.4",
+    "twitter": "0.2.9",
+    "async": "0.9.0",
     "connect-mongo": "*",
-    "mongoose": "*"
+    "mongoose": "3.6.13"
   },
   "devDependencies": {
     "grunt": "*",
@@ -31,6 +36,6 @@
   },
   "subdomain": "twitterpoll",
   "engines": {
-    "node": "0.8.x"
+    "node": "0.10.x"
   }
 }
