--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "node-twitter-vote-mongo",
-  "title": "Twitter Vote Counter",
-  "description": "A demo to show how to setup a Twitter vote counter",
+  "name": "node-twitter-vote-mongo-mulitple",
+  "title": "Twitter Vote Counter – Multiple Questions",
+  "description": "A demo to show how to setup a Twitter vote counter, with multiple questions across pages",
   "url": "/",
   "version": "0.0.1-10",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "node index.js"
   },
   "dependencies": {
-    "express": "3.1.2",
+    "express": "4.3.2",
     "compression": "1.0.2",
     "morgan": "1.1.1",
     "body-parser": "1.2.2",
